Fix label overflowing to the left

--- a/src/components/Hero/CenteredContent/index.module.scss
+++ b/src/components/Hero/CenteredContent/index.module.scss
@@ -22,6 +22,7 @@
 }
 
 .label {
+  margin-left: 0;
   margin-bottom: calc(var(--base) * 2);
   display: block;
 
